Quota and cache moved to swagger
